# Health

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.override.yml  docker-compose.yml  future-steps.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  report-viewer-deployment.md  turbo.json
.antigravitycli/: fd16fb3c-3444-430a-aa96-d9a32d675643.json
.codex/: hooks.json
.cursor/: hooks.json
ai-doc/: 00_PROJECT_OVERVIEW.md  (+14 more)
apps/extraction/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  seed_kb.py
apps/extraction/app/: __init__.py  main.py  security.py
apps/extraction/app/extractors/: __init__.py  mistral_ocr.py  pdfplumber.py  pymupdf.py
apps/extraction/app/merge/: __init__.py
apps/extraction/app/models/: __init__.py  responses.py  schemas.py
apps/extraction/app/panel_detection/: __init__.py
apps/extraction/app/parsers/: __init__.py  biomarker.py  dictionary.py  fuzzy.py  insights.py  mistral_client.py  normalizer.py  openai_client.py  quality.py
apps/extraction/app/phi/: __init__.py  presidio.py  regex_fallback.py  tokenizer.py
apps/extraction/app/quality/: __init__.py
apps/extraction/app/rag/: RAG_NOTES.md  __init__.py  config.py  formatting.py  ingestion.py  llm.py  retrieval.py  router.py
apps/extraction/app/resolver/: __init__.py
apps/extraction/app/routers/: __init__.py  extract.py  health.py  normalize.py
apps/extraction/app/validators/: __init__.py
apps/extraction/tests/: test_merge_pipeline.py  test_normalize_api.py  test_normalizer.py  test_quality.py
(+114 files in other folders)
