[project]
name = "extraction-service"
version = "0.5.0"
description = "PDF extraction, PHI masking, biomarker parsing, and insight generation microservice."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-postgres>=0.0.12",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "psycopg_pool>=3.2.0",
    "langchain-text-splitters>=0.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
